--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">BrainboxApplication</string>
+    <string name="facebook_app_id">2164596040489366</string>
+    <string name="fb_login_protocol_scheme">fb2164596040489366</string>
 </resources>
